// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterMountOrUnMount should append new children 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 0,
      "willMount": true,
    },
    Object {
      "key": 1,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 2,
      "willUnmount": true,
    },
    Object {
      "key": 4,
      "willMount": true,
    },
    Object {
      "key": 6,
      "willMount": true,
    },
    Object {
      "key": 3,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 5,
      "willMount": true,
    },
  ],
  "willMount": true,
  "willUnMount": true,
}
`;

exports[`filterMountOrUnMount should mark child is about to be unMount 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 1,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 2,
      "willUnmount": true,
    },
  ],
  "willMount": false,
  "willUnMount": true,
}
`;

exports[`filterMountOrUnMount should work correctly when noting changed 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 1,
      "willMount": false,
      "willUnmount": false,
    },
  ],
  "willMount": false,
  "willUnMount": false,
}
`;

exports[`filterMountOrUnMount should work fine by adding new child when children were empty 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 1,
      "willMount": true,
    },
    null,
  ],
  "willMount": true,
  "willUnMount": false,
}
`;

exports[`filterMountOrUnMount should work fine when all deleted 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 1,
      "willUnmount": true,
    },
  ],
  "willMount": false,
  "willUnMount": true,
}
`;

exports[`filterMountOrUnMount should work fine with both empty 1`] = `
Object {
  "mappedChildren": Array [
    null,
  ],
  "willMount": false,
  "willUnMount": false,
}
`;

exports[`filterMountOrUnMount should work fine with object 1`] = `
Object {
  "mappedChildren": Array [
    Object {
      "key": 0,
      "willMount": true,
    },
    Object {
      "key": 1,
      "willUnmount": true,
    },
  ],
  "willMount": true,
  "willUnMount": true,
}
`;
